<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity"
    android:gravity="center">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/menu_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/profile_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_input_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_profile_surname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/user_profile_adress"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_adress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_profile_street"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_adress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_adress_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_profile_street_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_adress_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_adress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_profile_adress_complement"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_adress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:entries="@array/states"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Spinner.DropDown"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_profile_city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_city_cep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_profile_cep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_city_cep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/button_user_profile_update"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>